--- a/index.html
+++ b/index.html
@@ -15,6 +15,84 @@
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae aliquam corporis id officia, repellat ex earum nihil, provident harum molestias nesciunt numquam dolor! Quibusdam inventore totam cupiditate doloribus et. Quod.
     </p>
     </div>
+    <div class="box-2">
+        <h1>Goodbye World</h1>
+        <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officia animi quisquam libero corrupti qui exercitationem deleniti quam dignissimos quo minus esse rerum quia corporis maiores reprehenderit ea aliquid, saepe suscipit!
+        </p>
+        <a href="">Read More</a>
     </div>
+    <div class="categories">
+        <h2>Categories</h2>
+        <ul>
+            <li><a href="#"> Category 1</a></li>
+            <li><a href="#">Category 2</a></li>
+            <li><a href="#">Category 3</a></li>
+            <li><a href="#">Category 4</a></li>
+        </ul>
+
+    </div>
+    <form class="my form">
+        <div class="form-group">
+            <label>Name:</label>
+            <input type="text" name="name">
+        </div>
+        <div class="form-group">
+            <label>Email:</label>
+            <input type="text" name="email">
+        </div>
+        <div class="form-group">
+            <label>Message:</label>
+            <textarea name="message"></textarea>
+        </div>
+        <input class="button" type="submit" value="Submit" name="">
+    </form>
+
+    <div class="block">
+        <h3>Heading</h3>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident culpa quia doloribus dolor alias at, fugiat officiis suscipit aspernatur. Qui, nulla recusandae. Earum voluptatibus rem sequi eaque possimus fuga! Animi.
+        </p>
+    </div>
+    <div class="block">
+        <h3>Heading</h3>
+        <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laudantium tempore suscipit ducimus vero fugiat cum repellendus harum neque quo iste rerum cupiditate nam distinctio eaque, nihil itaque, esse perferendis incidunt?
+        </p>
+    </div>
+    <div class="block">
+        <h3>Heading</h3>
+        <p>
+           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque laboriosam perferendis repellendus doloribus natus impedit id aliquam sed, tempora voluptates fugiat ipsum magni aut distinctio, esse culpa, blanditiis tenetur quidem.
+        </p>
+    </div>
+
+    <div class="clr"></div>
+
+    <div id="main-block">
+        <h3>Heading</h3>
+        <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta quos magnam magni architecto nobis cum temporibus, quae odio doloremque fugit, debitis amet perspiciatis est, unde blanditiis aut similique incidunt? Voluptatem!
+        </p>
+    </div>
+
+    <div id="sidebar">
+        <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis vel veritatis sint minima ratione quidem suscipit tempore inventore, libero eius. Exercitationem mollitia perferendis sed quisquam neque. Illum provident aut repellat.
+        </p>
+    </div>
+
+    <div class="clr"></div>
+
+    <div class="p-box">
+        <h1>Hello</h1>
+        <h2>Goodbye</h2>
+    </div>
+
+    </div>
+
+    <a class=" fix me button" href=""> Hello </a>
+
+    <div style="margin-top: 500px"></div>
 </body>
 </html>
